Doc/force-app/main/default/objects/Validation_Checklist__c/Validation_Checklist__c.object-meta.xml
<CustomObject>
    <label>Validation Checklist</label>
    <nameField>
        <displayFormat>VC-{00000}</displayFormat>
        <label>Validation Checklist Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Validation Checklists</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>