Doc/force-app/main/default/objects/Validation_Checklist__c/fields/Deal_Desk_Audit_Complete__c.field-meta.xml
<CustomField>
    <fullName>Deal_Desk_Audit_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>BIZ-61710 - Deal Desk will be checking the “Deal Desk Audit Complete” checkbox to TRUE after they review the Quote.</description>
    <label>Deal Desk Audit Complete</label>
    <type>Checkbox</type>
</CustomField>