Doc/force-app/main/default/objects/Validation_Checklist__c/fields/IsBookingDateChecked__c.field-meta.xml
<CustomField>
    <fullName>IsBookingDateChecked__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check Booking Date - BIZ-45142</description>
    <inlineHelpText>Today’s Date</inlineHelpText>
    <label>Booking Date</label>
    <type>Checkbox</type>
</CustomField>