Doc/force-app/main/default/objects/Validation_Checklist__c/fields/IsInvContact__c.field-meta.xml
<CustomField>
    <fullName>IsInvContact__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Invoicing Contact is provided (either on OSA or on quote) for New Software &amp; Services Only deals - BIZ-45142</description>
    <inlineHelpText>Invoicing Contact is provided (either on OSA or on quote) for New Software &amp; Services Only deals</inlineHelpText>
    <label>Invoicing Contact</label>
    <type>Checkbox</type>
</CustomField>