Doc/force-app/main/default/objects/Validation_Checklist__c/fields/IsLOBChecked__c.field-meta.xml
<CustomField>
    <fullName>IsLOBChecked__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is Line Of Business Checked - BIZ-45142</description>
    <inlineHelpText>DealCloud Intapp</inlineHelpText>
    <label>Line of Business</label>
    <type>Checkbox</type>
</CustomField>