Doc/force-app/main/default/objects/Validation_Checklist__c/fields/IsMDQOnPremChecked__c.field-meta.xml
<CustomField>
    <fullName>IsMDQOnPremChecked__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is it Includes Multi-Year Term for On-Prem - BIZ-45142</description>
    <inlineHelpText>on-prem products and multi-year term</inlineHelpText>
    <label>Includes Multi-Year Term for On-Prem</label>
    <type>Checkbox</type>
</CustomField>