Doc/force-app/main/default/objects/Validation_Checklist__c/fields/IsNoTnCChange__c.field-meta.xml
<CustomField>
    <fullName>IsNoTnCChange__c</fullName>
    <defaultValue>false</defaultValue>
    <description>No changes to the language in the Terms &amp; Conditions - BIZ-45142</description>
    <inlineHelpText>No changes to the language in the Terms &amp; Conditions</inlineHelpText>
    <label>No changes to the language in the T&amp;Cs</label>
    <type>Checkbox</type>
</CustomField>