Doc/force-app/main/default/objects/Validation_Checklist__c/fields/IsOpptyTCVChecked__c.field-meta.xml
<CustomField>
    <fullName>IsOpptyTCVChecked__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check opportunity TCV - BIZ-45142</description>
    <inlineHelpText>Matches the OSA Grand Total</inlineHelpText>
    <label>TCV</label>
    <type>Checkbox</type>
</CustomField>