Doc/force-app/main/default/objects/Validation_Checklist__c/fields/IsRORExpDateChecked__c.field-meta.xml
<CustomField>
    <fullName>IsRORExpDateChecked__c</fullName>
    <defaultValue>false</defaultValue>
    <description>conditionally visible if ROR field has value other than ‘None’ - BIZ-45142</description>
    <inlineHelpText>Date that the customer can exercise ROR until</inlineHelpText>
    <label>ROR Expiration Date</label>
    <type>Checkbox</type>
</CustomField>