Doc/force-app/main/default/objects/Validation_Checklist__c/fields/IsSFACapChecked__c.field-meta.xml
<CustomField>
    <fullName>IsSFACapChecked__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check SFA Cap after Initial Term - BIZ-45142</description>
    <label>SFA Cap after Initial Term</label>
    <type>Checkbox</type>
</CustomField>