Doc/force-app/main/default/objects/Validation_Checklist__c/fields/Order_Management_Audit_Complete__c.field-meta.xml
<CustomField>
    <fullName>Order_Management_Audit_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Order Management Audit Complete</label>
    <type>Checkbox</type>
</CustomField>