Doc/force-app/main/default/objects/Validation_Checklist__c/fields/Total_Checklist_Count__c.field-meta.xml
<CustomField>
    <fullName>Total_Checklist_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Total checklist count for the corresponding quote - BIZ-45142</description>
    <label>Total Checklist Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>