Doc/force-app/main/default/objects/Validation_Checklist__c/listViews/ALL_SA.listView-meta.xml
<ListView>
    <fullName>ALL_SA</fullName>
    <columns>NAME</columns>
    <columns>IsACVChangeUpdated__c</columns>
    <columns>IsACVTypeUpdated__c</columns>
    <columns>Contract_Verified__c</columns>
    <columns>IsMDQOnPremChecked__c</columns>
    <columns>IsInvContact__c</columns>
    <columns>IsServiceTotChecked__c</columns>
    <columns>IsSubsFeeChecked__c</columns>
    <columns>Total_Checklist_Count__c</columns>
    <columns>IsProductTypeChecked__c</columns>
    <columns>IsOpptyTCVChecked__c</columns>
    <columns>IsRORChecked__c</columns>
    <columns>Quote__c</columns>
    <columns>IsQLIChecked__c</columns>
    <columns>IsLOBChecked__c</columns>
    <filterScope>Everything</filterScope>
    <label>ALL SA</label>
    <language>en_US</language>
</ListView>